<resources>
    <string name="app_name">Taller ya</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="correo_cliente">Correo electronico</string>
    <string name="password_cliente">Contraseña</string>
    <string name="nombre_cliente">Nombre:</string>
    <string name="direccion_cliente">Direccion:</string>
    <string name="telefono_cliente">Num. de Telefono:</string>
    <string name="btn_sesion">Iniciar Sesión</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="title_activity_menu_slide">Taller YA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TALLER YA</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txtBienve">La aplicación que te conecta con tu taller favorito.</string>
    <string name="txtVer">Version 1.0</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Agendamiento</string>
    <string name="menu_slideshow">Promociones</string>
    <string name="menu_tools">Presupuesto</string>
    <string name="menu_share">Registro</string>
    <string name="menu_send">Send</string>
    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
