<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="com.example.app_taller.SesionFragment"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="Login"

        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correo_cliente"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/password_cliente"
            app:layout_constraintTop_toBottomOf="@+id/txtObservaciones"
           />

    <Button
        android:id="@+id/btnSesion"
        style="@style/PrimaryColoredButton"
        android:layout_width="match_parent"
        android:layout_height="61dp"

        android:text="@string/btn_sesion"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="71dp"

        android:gravity="center"
        android:text="¿Aún no tenes una cuenta?"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"

        app:layout_constraintTop_toBottomOf="@+id/btnSesion" />

    <Button
        android:id="@+id/btnRegistrar"
        style="@style/PrimaryColoredButton"
        android:layout_width="157dp"

        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_registrar"
        app:layout_constraintTop_toBottomOf="@+id/btnSesion" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txtVer"
        android:textColorLink="#00000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="1.0" />

</LinearLayout>



